feat(CardGameGeek): add CardGameGeek cardShop scan